# pybcj

./: .flake8  .gitignore  CMakeLists.txt  Changelog.rst  MANIFEST.in  README.md  README.rst  azure-pipelines.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: cibuildwheel.yml  publish-to-pypi.yml  release-note.yml  run-tox-tests.yml
issue_template/: bug_report.md  feature_request.md
lib/: Arch.h  Bra.c  Bra.h  Bra86.c
src/bcj/: __init__.py
src/bcj/c/: c_bcj.py
src/ext/: BraIA64.c  _bcjmodule.c
src/pybcj/: __init__.py
src/pybcj/c/: c_bcj.py
tests/: test_bcj_misc.py  test_bcj_x86.py  test_fuzzer.py
