[flake8]
max-line-length = 125
ignore = F841
extend-ignore = E203

[bdist_wheel]
universal = 0

[metadata]
name = pybcj
description = bcj filter library
long_description = file: README.rst
long_description_content_type = text/x-rst
keywords = 7zip, bcj
license = LGPL-2.1+
author = Hiroshi Miura
author_email = miurahr@linux.com
url = http://github.com/miurahr/pybcj
classifiers =
      Development Status :: 4 - Beta
      License :: OSI Approved :: GNU Lesser General Public License v2 or later (LGPLv2+)
      Operating System :: MacOS :: MacOS X
      Operating System :: Microsoft :: Windows
      Operating System :: POSIX
      Operating System :: POSIX :: Linux
      Programming Language :: Python
      Programming Language :: Python :: 3
      Programming Language :: Python :: 3.6
      Programming Language :: Python :: 3.7
      Programming Language :: Python :: 3.8
      Programming Language :: Python :: 3.9
      Programming Language :: Python :: 3.10
      Programming Language :: Python :: 3 :: Only
      Topic :: Software Development :: Libraries :: Python Modules

[options]
install_requires =
      importlib_metadata;python_version<"3.8"
setup_requires =
      setuptools-scm[toml]>=6.0.1
      setuptools>=58.0
packages = bcj

[options.package_data]
bcj = py.typed, *.pyi

[options.extras_require]
test =
      pytest
      hypothesis
check =
      mypy
      check-manifest
      flake8
      readme-renderer
      pygments
      isort
      twine
